--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -21,6 +21,11 @@
   </form>
 
 </div>
+<script>
+  let s = document.getElementById("body")
+  
+  s.style.backgroundColor = "#87a08b"
+  </script>
 </div>
 
 
