--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -23,4 +23,9 @@
 </form>
 </div>
 </div>
+<script>
+  let s = document.getElementById("body")
+  
+  s.style.backgroundColor = "#87a08b"
+  </script>
 {% endblock %}
