--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -18,8 +18,20 @@
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    </head>
-    <body>
+<style>
+    /* .btn-primary {
+        background-color: #d2d6a8;
+        border: #d2d6a8;
+    }
+    .btn-primary:hover{
+        background-color: #d2d6a8;
+        border: #d2d6a8;
+        text-shadow: 0.5px 0.5px;
+    } */
+</style>    
+</head>
+
+    <body id="body">
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark " style="background-color:#5c715e;">
             <div class="container">
@@ -27,11 +39,11 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         {% if  request.user.is_authenticated %}
-                        <li class="nav-item"><a class="nav-link" aria-current="page" href="{% url 'profile-update' id=request.user.id %}" id="blognavbar">{{request.user.username}}</a></li>
+                        <li class="nav-item"><a class="nav-link" aria-current="page" href="{% url 'profile-update' id=request.user.id %}" id="namenavbar"> <img  alt="" class="rounded-circle" id="dpnavbar" style="width: 30px; height: 30px;"></a></li>
                         {% endif %}
                         <li class="nav-item"><a class="nav-link" aria-current="page" href="/blog" id="blognavbar">Home</a></li>
+                       
                         {% if request.user.is_authenticated %}
-                        <li class="nav-item"><a class="nav-link" href="{% url 'post-create' %}" id="postnavbar">Post</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'account_logout' %}" id="logoutnavbar">Logout</a></li>
                    
                         {% endif %}
@@ -39,6 +51,7 @@
                        
                         <li class="nav-item"> <a class="nav-link" href="{% url 'account_login' %}" id="loginnavbar">Login</a></li>
                         {% endif %}
+                        <li class="nav-item"><a class="nav-link rounded-pill" href="{% url 'post-create' %}" id="postnavbar" style="background-color:#404f41;">Add Post</a></li>
                     </ul>
                 </div>
             </div>
@@ -46,11 +59,27 @@
         {% block content %}
         {% endblock content %}
         <!-- Footer-->
-        <footer class="py-5 bg-dark">
+        <footer class="py-5" style="background-color: #5c715e;">
             
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script>
+            window.onload = function() {
+          dpload();
+        };
+        
+        function dpload(){
+            let s = document.getElementById("dpnavbar")
+            let url = "{{dpurl}}"
+            if (url){
+            s.setAttribute("src", url);
+            }
+            else{
+                s.style.display ="none"
+            }
+        }
+        </script>
         <script src="{% static 'js/highlight.pack.js' %}"></script>
         <!-- Core theme JS-->
         <script src="{% static 'js/scripts.js' %}"></script>
